repo-e0f14b5b2baeff/platform-devsecops/policies/kyverno/enforce-signatures.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: enforce-signatures
spec:
  validationFailureAction: enforce
  rules:
    - name: verify-signature
      match:
        resources:
          kinds: ["Pod"]
      verifyImages:
        - imageReferences:
            - "*"
          attestors:
            - entries:
                - keyless:
                    subject: "https://github.com/*"
                    issuer: "https://token.actions.githubusercontent.com"
